# Hopper_Hardware

./: .gitignore  CMakeLists.txt  ESP8266_receiver.ino  README.md  T41_only_sender_testing.ino  pc_wifi_1D_testing.c
data/: data.csv
inc/: Types.h
matlab/: DataPlot.asv  DataPlot.m
src/: '  .PC_testing_1D.cpp.swp  Hopper.cpp  KoiosT41_testing_1D.ino  PC_testing_1D.c  PC_testing_1D.cpp  PC_testing_fun.c  PC_testing_fun.h  makefile  pc_testing  pc_testing_make
src/ESP_8266/: ESP_8266.ino
src/ESP_test/: ESP_test.ino
src/ESP_testing_1D/: ESP_test.ino  ESP_testing_1D.ino
src/FlywheelTeensy/: FlywheelTeensy.ino
src/FootTeensy/: FootTeensy.ino
src/T41_testing_1D/: T41_testing_1D.ino
src/Teensy/: Teensy.ino
src/libraries/Bia/: Bia.cpp  Bia.h
src/libraries/Koios/: Koios.cpp  Koios.h
